compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__bit_array_segment_type_does_not_allow_unit_codepoint_utf32_2.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "case <<1>> { <<1:utf32_codepoint-size(5)>> -> 1 }"
---
----- SOURCE CODE
case <<1>> { <<1:utf32_codepoint-size(5)>> -> 1 }

----- ERROR
error: Invalid bit array segment
  ┌─ /src/one/two.gleam:1:34
  │
1 │ case <<1>> { <<1:utf32_codepoint-size(5)>> -> 1 }
  │                                  ^^^^^^^ Size cannot be specified here

Hint: utf32_codepoint segments have an automatic size.
See: https://tour.gleam.run/data-types/bit-arrays/
